# gaswatch

./: .gitattributes  .gitignore  README.md  pyproject.toml  run-browser.cmd  run-rates.cmd  run.cmd  setup-scheduler.ps1
docs/: FLARE-contract-staging.xlsx  pipeline-rate-database-setup-plan.md  powerbi.md
gaswatch/: __init__.py  cli.py  dashboard.py  dates.py  db.py  http.py  models.py  rates.py  ratesheets.py
gaswatch/pipelines/: __init__.py  base.py  cgt.py  common.py  epng.py  foothills.py  gtn.py  kernriver.py  ngtl.py  nwp.py  ruby.py  socal.py  transwestern.py
tests/: test_parsers.py
tests/fixtures/: cgt_foghorn.html  cgt_map.json  cgt_map_hist.xlsx  cgt_ofo.json  cgt_ratesheet.txt  cgt_sd_archive.txt  epng_cer.html  epng_locations.txt  epng_locdownload_result.txt  epng_notice_detail.html  epng_notices.html  epng_pt0.html  epng_rate_pages.txt  epng_seg.html  epng_seg0.html  epng_seg_post.html  foothills_rates.txt  gtn_hist.csv  gtn_notices.json  gtn_oac.json  gtn_rate_pages.txt  gtn_rates.html  kern_rate_pages.txt  kr_home.html  ngtl_capabilities.csv  ngtl_chart.json  ngtl_csr.json  ngtl_outages.csv  ngtl_tolls.txt  nwp_rate_pages.txt  ruby_rate_pages.txt  ruby_seg_after_retrieve.html  ruby_seg_timely.html  socal_capacity.csv  socal_dailyops.csv  socal_gbts.txt  socal_ledger.html  socal_maint.csv  tw_oac.csv  tw_rate_matrix.txt
