[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gaswatch"
version = "0.1.0"
description = "Scraper for western natural gas pipeline EBB data (flows, capacity, maintenance, rates)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "lxml>=5.0",
    "typer>=0.12",
    "openpyxl>=3.1",
    "pypdf>=4.0",
    "xlrd>=2.0",
    "truststore>=0.9",
]

[project.optional-dependencies]
browser = ["playwright>=1.44"]
dev = ["pytest>=8.0"]

[project.scripts]
gaswatch = "gaswatch.cli:app"

[tool.setuptools.packages.find]
include = ["gaswatch*"]
